syntax = "proto3";

package ccnu.v1;
import "errors/errors.proto";

option go_package="github.com/asynccnu/ccnubox-be/be-api/gen/proto/ccnu/v1;ccnuv1";

enum CCNUErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;

  INVALID_SID_OR_PWD = 0 [(errors.code) = 401];
  CCNUSERVER_ERROR = 1 [(errors.code) = 501];
  SYSTEM_ERROR = 2 [(errors.code) = 502];
}